--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vite": "^6.0.0",
     "typescript": "^5.7.0",
     "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0"
+    "@types/react-dom": "^19.0.0",
+    "@vitejs/plugin-react": "^4.3.4"
   }
 }
